--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1131,6 +1131,7 @@ input, select, textarea {
 
 			#viewer .inner > * {
 				pointer-events: auto;
+				filter: drop-shadow(0px 0px 0.08em rgba(0, 0, 0, 0.3));
 			}
 
 			#viewer .inner:before {
@@ -1220,12 +1221,12 @@ input, select, textarea {
 				text-align: right;
 				color: #444;
 				text-shadow:
-					0 0 1px #F8F8F8,
-					0 0 1px #F8F8F8,
-					0 0 2px #F8F8F8,
-					0 0 2px #F8F8F8,
-					0 0 3px #F8F8F8,
-					0 0 3px #F8F8F8;
+					0 0 1px #FFF,
+					0 0 1px #FFF,
+					0 0 2px #FFF,
+					0 0 2px #FFF,
+					0 0 3px #FFF,
+					0 0 3px #FFF;
 
 				z-index: 1;
 			}
@@ -1240,9 +1241,9 @@ input, select, textarea {
 						0 0 1px #000,
 						0 0 1px #000,
 						0 0 2px #000,
-						0 0 2px #111,
-						0 0 3px #111,
-						0 0 3px #111;
+						0 0 2px #000,
+						0 0 3px #000,
+						0 0 3px #000;
 				}
 
 			#viewer .slide .image {
